hydroflow/tests/compile-fail/surface_lattice_reduce_wronggeneric.stderr
warning: `lattice_reduce` expects lattice flow input, has sequential input. This may be an error in the future.
 --> tests/compile-fail/surface_lattice_reduce_wronggeneric.rs:6:16
  |
6 |             -> lattice_reduce::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0271]: expected `Drain<'_, {integer}>` to be an iterator that yields `SetUnion<HashSet<u32>>`, but it yields `{integer}`
 --> tests/compile-fail/surface_lattice_reduce_wronggeneric.rs:5:9
  |
5 |         source_iter([1,2,3,4,5])
  |         ^^^^^^^^^^^^^^^^^^^^^^^^ expected `SetUnion<HashSet<u32>>`, found integer
6 |             -> lattice_reduce::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                                          ---------------------------------------------------- required by a bound introduced by this call
  |
  = note: expected struct `SetUnion<HashSet<u32>>`
               found type `{integer}`
note: required by a bound in `check_inputs`
 --> tests/compile-fail/surface_lattice_reduce_wronggeneric.rs:6:42
  |
6 |             -> lattice_reduce::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_inputs`
